--- a/src/Pages/Home/Home.css
+++ b/src/Pages/Home/Home.css
@@ -5,6 +5,37 @@
     height: 100vh;
     width: 100vw;
 }
+h3 {
+    font-family: 'Black Han Sans';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 2.5em;
+    text-align: center;
+    letter-spacing: 0.15em;
+    color: #292D32;
+    text-shadow: 0px 2px 1px rgba(0, 0, 0, 0.69);
+    margin-top: 5px;
+}
+h5 {
+    font-family: 'Black Han Sans';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 1.8em;
+    text-align: center;
+    letter-spacing: 0.15em;
+    margin-top: 35px;
+    margin-bottom: 15px;
+    color: #292D32;
+}
+p {
+    font-family: 'Baloo Tamma 2';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 1em;
+    letter-spacing: 0.15em;
+    color: #1B1A1A;
+    margin: 25px;
+}
 
 .img-wrapper {
     height: 50vh;
@@ -34,6 +65,9 @@
     list-style: none;
     display: flex;
     justify-content: flex-end;
+}
+.nav-list li:hover {
+    border-bottom: 8px #A7161B solid;
 }
 .nav-list li, button {
     margin-right: 30px;
@@ -132,11 +166,14 @@
     width: 100%;
     height: 45vh;
 }
+
+
 .consulting-container {
     background: #C1C4D3;
     width: 100%;
     height: 450px;
 }
+
 .hiring-container {
     background: #C9CBD5;
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.25);
@@ -161,7 +198,7 @@
     background: rgba(74, 71, 81, 0.03);
     border: 3px solid rgba(43, 33, 33, 0.2);
     border-radius: 10px;
-    height: 80%;
+    max-height: 250px;
     padding: 1.5rem;
     width: 100%;
     margin: 20px;
@@ -171,12 +208,12 @@
     font-style: normal;
     font-weight: 400;
     font-size: 4vh;
-    line-height: 20px;
     /* or 83% */
     letter-spacing: 0.15em;
     color: #292D32;
     text-shadow: 0px 2px 2px rgba(0, 0, 0, 0.25);
     margin-bottom: 5px;
+    margin-right: 20px;
 }
 
 /* ShippingTracking/Estimates */
@@ -216,10 +253,27 @@
     box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.25);
     border-radius: 5px;
 }
-.estimate-btn {
-    
-}
+
 .flex {
     display: flex;
     justify-content: space-evenly;
 }
+
+.consulting-container, .hiring-container {
+    display: flex;
+    justify-content: space-evenly;
+
+}
+.img-sales {
+    max-width: 500px;
+    max-height: 400px;
+    border-radius: 530px 0px 0px 530px;
+}
+.convo-img {
+    max-width: 500px;
+    max-height: 400px;
+    border-radius: 0px 330px 330px 0px;
+}
+
+/* Footer */
+
